# aos-workflow-gate

./: .editorconfig  .gitignore  CONTRIBUTING.md  NOTICE  README.md  ROADMAP.md  SECURITY.md  action.yml  docs.json  pyproject.toml
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: feedback.yml  guided-pilot-scoping.yml
.github/workflows/: aos-workflow-gate-ci.yml  aos-workflow-gate-no-checkout.yml  aos-workflow-gate-release-gate.yml  aos-workflow-gate-self.yml  public-surface.yml
aos_workflow_gate/: __init__.py  __main__.py  adapters.py  agent_action.py  bench.py  canonical.py  change_proof.py  checkpr.py  cli.py  collect.py  diagnostics.py  errors.py  evaluate.py  evidence.py  export.py  manifest.py  paths.py  policy.py  preflight.py  project_check.py  requirements.py  source_contract.py  summarize.py  verifier_change.py  version.py  workflow_state.py
aos_workflow_gate/packs/: agent-review-advisory.yml  code-change-proof.yml  evidence-integrity.yml  project-check.yml  release-candidate.yml
benchmarks/: README.md
benchmarks/adversarial/: MATRIX.md  README.md
benchmarks/value/: README.md  (+9 more)
docs/: ADAPTERS.md  ADOPTION_GUIDE.md  AGENT_ACTION.md  ARCHITECTURE.md  BENCHMARK_HARNESS.md  BUYER_FAQ.md  CHANGE_PROOF.md  CI_INTEGRATIONS.md  COMPARISON.md  DECISION_PREDICATE.md  DEVELOPMENT.md  FUNNEL.md  GUIDED_PILOT.md  MARKETPLACE_LISTING.md  ONE_PAGER.md  PILOT_PACKAGE.md  POLICY_PACKS.md  PREFLIGHT.md  PROJECT_CHECK.md  RELEASE_GOVERNANCE.md  SCOPE.md  SECURITY_READINESS.md  SOURCE_CONTRACT.md  STANDARDS_COMPATIBILITY.md  TRUST.md  USER_FAQ.md  USE_CASES.md  VALUE.md  VALUE_METRICS.md  index.html
examples/: aos-kernel-gate-decision.json  aos-kernel-signal-bundle.json  check-pr-bundle.json  check-pr-policy.json  check-pr-record.json  digest-vectors.json  gate-decision.json  github-pr-signal-bundle.json  green-but-incomplete-policy.json  green-but-incomplete-record.json  pr-evidence-bundle.json  pr-evidence-policy.json  pr-evidence-record.json  zero-required-bundle.json  zero-required-policy.json  zero-required-record.json
policies/: aos-kernel-release-surface.yml  default.yml
tests/: test_adapters.py  test_adversarial_bindings.py  test_adversarial_corpus.py  test_agent_action.py  test_backward_compat.py  test_bench.py  test_benchmark_cases.py  test_change_proof.py  test_check_pr.py  test_collect.py  test_collection_consistency.py  test_decision_ux.py  test_discovery.py  test_discovery_corpus.py  test_evaluate.py  test_evidence_integrity_policy.py  test_export.py  test_fixtures_replay.py  test_golden_summaries.py  test_html_view.py  test_integrated_preflight.py  test_preflight.py  test_product_test_readiness.py  test_project_check.py  test_public_surface.py  test_remediation_coverage.py  test_requirements.py  test_resilience.py  test_run.py  test_security_hardening.py  test_semantic_correctness.py  test_source_contract.py  test_summarize.py  test_utility_test_readiness.py  test_value_gate.py  test_verifier_change.py  test_workflow_state.py  test_zero_trust.py
tools/: __init__.py  adversarial_matrix.py  check_public_surface.py  contrast.py  discovery.py  value_gate.py
(+78 files in other folders)
